Fixed spacing issues

--- a/egStyle.css
+++ b/egStyle.css
@@ -67,7 +67,7 @@ background-size: 30%;
 	width_: 200px;
     height_: 150px; 
 	width: 90%;
-	height: 9000px;
+	height_: 9000px;
 	margin-top_: 150px;
     margin-bottom_: 10px;
     margin-right_: 10px;
