--- a/exStyle.css
+++ b/exStyle.css
@@ -40,7 +40,7 @@ background-size: 30%;
   font_: bold 30px/1.3 'Merienda One';
   font_: bold 30px/1.3 'Impact';
   font: bold 20px/1 'Georgia',serif;
-  height: 458px; 
+  height_: 458px; 
   position: absolute; 
   text-align: center; 
   top: 370px; 
